dynamic ids, works with -test and -qa

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="test-div" data-test="show-kim">Kim</div>
-    <div class="test-div" data-test="set-hello">Hello</div>
+    <div class="test-div" data-qa="set-hello">Hello</div>
     <script src="main.js"></script>
   </body>
 </html>
