fix empty targets message

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <span class="scout-qa--description">Hit the switch to highlight test IDs</span>
       </div>
     </div>
-    <div class="test-div" data-test="show-kim">Kim</div>
-    <div class="test-div" data-qa="set-hello">Hello</div>
+    <div class="test-div" >Kim</div>
+    <div class="test-div" >Hello</div>
     <script src="js/main.js"></script>
   </body>
 </html>
