hide works, improved highlight border

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
       <div class="scout-qa--header">
         <label class="scout-qa--toggle">
           <input id="scout-toggle" type="checkbox" hidden />
-          <div class="scout-qa--toggle-slider">HIDE</div>
+          <div class="scout-qa--toggle-slider">OFF</div>
         </label>
         <div>
           <img src="svg/scout.svg" />
