--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Scout QA Extension">
   </head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/scout.css">
   <body>
     <div class="scout-qa--popup">
       <div class="scout-qa--header">
